# Tetris-SFML

./: CMakeLists.txt  README.md
cmake_modules/: FindSFML.cmake
src/: main.cpp
src/Game/: Block.cpp  Block.h  Board.cpp  Board.h  Game.cpp  Game.h
src/Game/Pieces/: FakePiece.cpp  FakePiece.h  JPiece.h  LPiece.h  LinePiece.h  OPiece.h  Piece.cpp  Piece.h  PieceTypes.h  SPiece.h  TPiece.h  ZPiece.h
src/Game/utils/: AssetsManager.cpp  AssetsManager.h  BoardCoordinates.cpp  BoardCoordinates.h  PieceGenerator.cpp  PieceGenerator.h  PieceHolder.cpp  PieceHolder.h  PieceMover.cpp  PieceMover.h  PieceProjection.cpp  PieceProjection.h  Score.cpp  Score.h
